--- a/demo/pyproject.toml
+++ b/demo/pyproject.toml
@@ -12,7 +12,9 @@ dependencies = [
     "flask-cors (>=5.0.1,<6.0.0)",
     "flask-qrcode (>=3.2.0,<4.0.0)",
     "python-dotenv (>=1.0.1,<2.0.0)",
-    "aries-askar (>=0.4.3,<0.5.0)"
+    "aries-askar (>=0.4.3,<0.5.0)",
+    "nanoid (>=2.0.0,<3.0.0)",
+    "flask-wtf (>=1.2.2,<2.0.0)"
 ]
 
 
