--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,8 @@ pydantic-settings = "^2.8.1"
 multiformats = "^0.3.1.post4"
 jcs = "^0.2.1"
 bitstring = "^4.3.0"
+cbor2 = "^5.6.5"
+black = "^25.1.0"
 
 
 [build-system]
