--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,12 +10,15 @@ crate-type = ["cdylib"]
 [dependencies]
 blsful = "3.0.0-pre8"
 credx = "0.2.1"
-indexmap = "2"
 uuid = "1.16.0"
 maplit = "1"
 rand = "0.8"
-serde_json = "1"
 rand_core = "0.6"
+indexmap = { version = "2", features = ["serde"] }
+serde = "1"
+serde_derive = "1"
+serde_json = "1"
+
 
 [dependencies.pyo3]
 version = "0.24.0"
